--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <h1>Welcome to Tiger's studio engine</h1>
     <p>Feel free to check our github page for news!</p>
     <p>Feel free to contact me via iamwutu@gmail.com</p>
-     <hr> />    
-    Follow me on YouTube: https://www.youtube.com/channel/UCBGEzWE5Gx9ouW_QDupFixA
+     <hr />    
+         <p>Follow me on YouTube:<link>https://www.youtube.com/channel/UCBGEzWE5Gx9ouW_QDupFixA</link></p>
     Follow me on Twitter: https://twitter.com/Wutu42718573
-    <hr> />
+    <hr />
     
      
    
