--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <p>Feel free to check our github page for news!</p>
     <p>Feel free to contact me via iamwutu@gmail.com</p>
      <hr />    
-         <p>Follow me on YouTube:<link>https://www.youtube.com/channel/UCBGEzWE5Gx9ouW_QDupFixA</link></p>
-    Follow me on Twitter: https://twitter.com/Wutu42718573
+         <p>Follow me on YouTube:<href="https://www.youtube.com/channel/UCBGEzWE5Gx9ouW_QDupFixA"></p>
+         <p>Follow me on Twitter:<href="https://twitter.com/Wutu42718573"></p>
     <hr />
     
      
