--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <p>Feel free to check our github page for news!</p>
     <p>Feel free to contact me via iamwutu@gmail.com</p>
      <hr />    
-         <p>Follow me on YouTube:<href="https://www.youtube.com/channel/UCBGEzWE5Gx9ouW_QDupFixA"></p>
-         <p>Follow me on Twitter:<href="https://twitter.com/Wutu42718573"></p>
+         <p>Follow me on YouTube:</p>
+          <a href="https://www.youtube.com/channel/UCBGEzWE5Gx9ouW_QDupFixA">
+         </a>
+         <p>Follow me on Twitter:</p>
+         <a href="https://twitter.com/Wutu42718573">
+         </a>
     <hr />
     
      
