--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
      <hr />    
          <p>Follow me on YouTube:</p>
           <a href="https://www.youtube.com/channel/UCBGEzWE5Gx9ouW_QDupFixA">
+                 ▶️WutuPlays
          </a>
          <p>Follow me on Twitter:</p>
          <a href="https://twitter.com/Wutu42718573">
+                🐦Wutu
          </a>
     <hr />
     
