--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
    
   <body>
     <h1>Welcome to Tiger's studio engine</h1>
-    <p>Feel free to check our github page for news!</p>
-    <p>Feel free to contact me via iamwutu@gmail.com</p>
+    <p>Check our github page for news!</p>
+    <p>Feel free to contact me via Gmail:</p>
+         <a href="iamwutu@gmail.com"
+            iamwutu@gmail.com
      <hr />    
          <p>Follow me on YouTube:</p>
           <a href="https://www.youtube.com/channel/UCBGEzWE5Gx9ouW_QDupFixA">
