--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <p>Check our github page for news!</p>
     <p>Feel free to contact me via Gmail:</p>
          <a href="iamwutu@gmail.com"
-            iamwutu@gmail.com
+            @iamwutu
             </a>
+           
      <hr />    
          <p>Follow me on YouTube:</p>
           <a href="https://www.youtube.com/channel/UCBGEzWE5Gx9ouW_QDupFixA">
