--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>Welcome to Tiger's studio engine</h1>
     <p>Check our github page for news!</p>
     <p>Feel free to contact me via Gmail:</p>
-         <a href="iamwutu@gmail.com"
-            @iamwutu
+         <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJqbzbTswhdCWMVvhMxRSkQZTSlNGzMkGKTSqDdzSMfTQNRnVxRJmwrnDwCwdNBsKZZMqMg"
+            iamwutu@gmail.com
             </a>
            
      <hr />    
