--- a/Tiger's studio engine intro:github/index.html
+++ b/Tiger's studio engine intro:github/index.html
@@ -6,7 +6,7 @@
    
   <body>
     <h1>Welcome to Tiger's studio engine</h1>
-    <h2> where you can play with friends,make friends,chat,and more!"</h2>
+    <h2> where you can play with friends,make friends,chat,and more!</h2>
          
          <h />
          
